# QuantumDevOps

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  pyproject.toml
dev/: index.html
dev/plan/: index.html
dev/test/: index.html
docs/: index.md
docs/dev/: README.md  code.md
docs/ops/: README.md
ops/deploy/: index.html
ops/feedback/: index.html
ops/monitor/: index.html
site/: 404.html  index.html  sitemap.xml
site/dev/code/: index.html
site/dev/release/: index.html
site/ops/: index.html
site/ops/evaluate/: index.html
